crates/etl-api/src/k8s/snapshots/etl_api__k8s__http__tests__create_iceberg_catlog_token_env_var_json.snap
---
source: crates/etl-api/src/k8s/http.rs
expression: iceberg_catalog_token_env_var_json
---
{
  "name": "APP_DESTINATION__ICEBERG__SUPABASE__CATALOG_TOKEN",
  "valueFrom": {
    "secretKeyRef": {
      "key": "catalog-token",
      "name": "abcdefghijklmnopqrst-42-iceberg"
    }
  }
}
